# goit-cs-hw-05

./: .gitignore  README.md  pyproject.toml  word_frequency.py
output/ini/: desktop.ini
